cmake_minimum_required(VERSION 3.7)
project(Digital_Dice)

set(CMAKE_CXX_STANDARD 14)

add_executable(BUS bus.cpp)
add_executable(BUS3 bus3.cpp)
add_executable(CHAIN chain.cpp)
add_executable(COIN_TOSS cointoss.cpp)
add_executable(DATING dating.cpp)
add_executable(DISH dishwasher.cpp)
add_executable(DISH2 dishwasher2.cpp)
add_executable(FORGET forget_burglar.cpp)
add_executable(GAMOW gamow_elevator.cpp)
