cmake_minimum_required(VERSION 3.7)
project(Digital_Dice)

set(CMAKE_CXX_STANDARD 14)

add_executable(BUS bus.cpp)
add_executable(BUS3 bus3.cpp)
add_executable(BUS_MCS bus_MCS.cpp)
add_executable(CHAIN chain.cpp)
add_executable(COIN_TOSS cointoss.cpp)
add_executable(COIN_TOSS_MCS cointoss_MCS.cpp)
add_executable(DATING dating.cpp)
add_executable(DISH dishwasher.cpp)
add_executable(DISH2 dishwasher2.cpp)
add_executable(DISH_MCS dishwasher_MCS.cpp)
add_executable(FORGET forget_burglar.cpp)
add_executable(GAMOW gamow_elevator.cpp)
add_executable(GAMOW_MCS gamow_elevator_MCS.cpp)
add_executable(JUDGES judges.cpp)
add_executable(MALT maltshop.cpp)
add_executable(MALT_MCS maltshop_MCS.cpp)
add_executable(MARATHON marathon.cpp)
add_executable(MATCHES matches.cpp)
add_executable(MATCHES_BANANCH matches_banach.cpp)
add_executable(MATCHES_MCS matches_MCS.cpp)
add_executable(MONO monotonic.cpp)
add_executable(PARKING_LOT parkinglot.cpp)
add_executable(PARKING_LOT4 parkinglot4.cpp)
add_executable(PARKING_LOT_MCS parkinglot_MCS.cpp)
add_executable(PARRONDO parrondo.cpp)
add_executable(PARRONDO1 parrondo1.cpp)
add_executable(PATROL patrol.cpp)
add_executable(POPE pope.cpp)
add_executable(POTATO potato.cpp)
add_executable(POTATO1 potato1.cpp)
add_executable(SENATORS senators.cpp)
add_executable(SHOPPING shopping_grid.cpp)
add_executable(STEVE_ELEVATOR steve_elevator.cpp)
add_executable(STEVE_ELEVATOR_MCS steve_elevator_MCS.cpp)
add_executable(SYLVESTER sylvester.cpp)
add_executable(SYLVESTER1 sylvester1.cpp)
add_executable(TP tp.cpp)
add_executable(UMBRELLA umbrella.cpp)
